fixed overflow height

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -21,6 +21,7 @@ p{
 	font-weight: 500;
 }
 #ruler{
+	height: 100vh;
 	overflow: hidden;
 }
 .ruler_y{
